cmake-build-debug/src/libs/bcc/src/cc/frontends/b/parser.yy.output
Terminals unused in grammar

   TFUNC
   TINCR
   TDECR


Grammatica

    0 $accept: program $end

    1 program: enter_statescope enter_varscope prog_decls exit_varscope exit_statescope

    2 prog_decls: prog_decl
    3           | prog_decls prog_decl

    4 prog_decl: var_decl TSEMI
    5          | struct_decl TSEMI
    6          | state_decl
    7          | table_decl TSEMI
    8          | pragma_decl
    9          | func_decl

   10 pragma_decl: TPRAGMA TIDENTIFIER TIDENTIFIER
   11            | TPRAGMA TIDENTIFIER TSTRING

   12 stmts: stmt
   13      | stmts stmt

   14 stmt: expr TSEMI
   15     | assign_expr TSEMI
   16     | return_expr TSEMI
   17     | call_expr TLBRACE enter_varscope table_result_stmts exit_varscope TRBRACE TSEMI
   18     | call_expr TLBRACE TRBRACE TSEMI
   19     | if_stmt
   20     | switch_stmt
   21     | var_decl TSEMI
   22     | state_decl
   23     | onvalid_stmt

   24 call_expr: any_ident TLPAREN call_args TRPAREN

   25 block: TLBRACE stmts TRBRACE
   26      | TLBRACE TRBRACE

   27 enter_varscope: %empty

   28 exit_varscope: %empty

   29 enter_statescope: %empty

   30 exit_statescope: %empty

   31 struct_decl: TSTRUCT ident TLBRACE struct_decl_stmts TRBRACE

   32 struct_decl_stmts: type_specifiers decl_stmt TSEMI
   33                  | struct_decl_stmts type_specifiers decl_stmt TSEMI

   34 table_decl: ident TCLT table_decl_args TCGT ident TLPAREN TINTEGER TRPAREN

   35 table_decl_args: ident
   36                | table_decl_args TCOMMA ident

   37 state_decl: TSTATE scoped_ident enter_statescope enter_varscope block exit_varscope exit_statescope
   38           | TSTATE scoped_ident TCOMMA TMUL enter_statescope enter_varscope block exit_varscope exit_statescope
   39           | TSTATE scoped_ident TCOMMA scoped_ident enter_statescope enter_varscope block exit_varscope exit_statescope

   40 func_decl: type_specifiers ident enter_statescope enter_varscope TLPAREN formals TRPAREN block exit_varscope exit_statescope

   41 table_result_stmts: table_result_stmt
   42                   | table_result_stmts table_result_stmt

   43 table_result_stmt: TMATCH ident enter_varscope TLPAREN formals TRPAREN block exit_varscope TSEMI
   44                  | TMISS ident enter_varscope TLPAREN TRPAREN block exit_varscope TSEMI
   45                  | TFAILURE ident enter_varscope TLPAREN formals TRPAREN block exit_varscope TSEMI

   46 formals: TSTRUCT ptr_decl
   47        | formals TCOMMA TSTRUCT ptr_decl

   48 type_specifier: TU8
   49               | TU16
   50               | TU32
   51               | TU64

   52 type_specifiers: type_specifier
   53                | type_specifiers type_specifier

   54 var_decl: type_specifiers decl_stmt
   55         | type_specifiers int_decl TEQUAL expr
   56         | TSTRUCT type_decl TEQUAL TLBRACE init_args_kv TRBRACE
   57         | TSTRUCT ref_stmt

   58 decl_stmt: int_decl
   59          | type_decl

   60 int_decl: ident TCOLON TINTEGER

   61 type_decl: scoped_ident ident

   62 ref_stmt: ptr_decl

   63 ptr_decl: scoped_ident TMUL ident

   64 init_args_kv: init_arg_kv
   65             | init_args_kv TCOMMA init_arg_kv

   66 init_arg_kv: TDOT ident TEQUAL expr
   67            | TDOT ident bitop TEQUAL expr

   68 if_stmt: TIF expr enter_varscope block exit_varscope
   69        | TIF expr enter_varscope block exit_varscope TELSE enter_varscope block exit_varscope
   70        | TIF expr enter_varscope block exit_varscope TELSE if_stmt

   71 onvalid_stmt: TVALID TLPAREN ident TRPAREN enter_varscope block exit_varscope
   72             | TVALID TLPAREN ident TRPAREN enter_varscope block exit_varscope TELSE enter_varscope block exit_varscope

   73 switch_stmt: TSWITCH expr TLBRACE case_stmts TRBRACE

   74 case_stmts: case_stmt
   75           | case_stmts case_stmt

   76 case_stmt: TCASE numeric block TSEMI
   77          | TCASE TMUL block TSEMI

   78 numeric: TINTEGER
   79        | THEXINTEGER
   80        | TINTEGER TCOLON TINTEGER
   81        | THEXINTEGER TCOLON TINTEGER
   82        | TTRUE
   83        | TFALSE

   84 assign_expr: expr TEQUAL expr

   85 return_expr: TRETURN expr

   86 expr: call_expr
   87     | call_expr bitop
   88     | table_index_expr
   89     | table_index_expr TDOT ident
   90     | any_ident
   91     | TAT dotted_ident
   92     | TDOLLAR dotted_ident
   93     | TDOLLAR dotted_ident bitop
   94     | TGOTO scoped_ident
   95     | TNEXT scoped_ident
   96     | TCONTINUE scoped_ident
   97     | TLPAREN expr TRPAREN
   98     | TLPAREN expr TRPAREN bitop
   99     | TSTRING
  100     | numeric
  101     | numeric bitop
  102     | expr TCLT expr
  103     | expr TCGT expr
  104     | expr TCGE expr
  105     | expr TCLE expr
  106     | expr TCNE expr
  107     | expr TCEQ expr
  108     | expr TPLUS expr
  109     | expr TMINUS expr
  110     | expr TMUL expr
  111     | expr TDIV expr
  112     | expr TMOD expr
  113     | expr TXOR expr
  114     | expr TAND expr
  115     | expr TOR expr
  116     | expr TLAND expr
  117     | expr TLOR expr
  118     | TNOT expr
  119     | TCMPL expr

  120 call_args: %empty
  121          | expr
  122          | call_args TCOMMA expr

  123 bitop: TLBRACK TCOLON TPLUS TINTEGER TRBRACK
  124      | TLBRACK TINTEGER TCOLON TPLUS TINTEGER TRBRACK

  125 table_index_expr: dotted_ident TLBRACK ident TRBRACK

  126 scoped_ident: ident
  127             | scoped_ident TSCOPE TIDENTIFIER

  128 dotted_ident: ident
  129             | dotted_ident TDOT TIDENTIFIER

  130 any_ident: ident
  131          | dotted_ident TARROW TIDENTIFIER
  132          | dotted_ident TDOT TIDENTIFIER
  133          | scoped_ident TSCOPE TIDENTIFIER

  134 ident: TIDENTIFIER


Simboli terminali e regole in cui appaiono

$end (0) 0
error (256)
TIDENTIFIER (258) 10 11 127 129 131 132 133 134
TINTEGER (259) 34 60 78 80 81 123 124
THEXINTEGER (260) 79 81
TPRAGMA (261) 10 11
TSTRING (262) 11 99
TU8 (263) 48
TU16 (264) 49
TU32 (265) 50
TU64 (266) 51
TEQUAL (267) 55 56 66 67 84
TCEQ (268) 107
TCNE (269) 106
TCLT (270) 34 102
TCLE (271) 105
TCGT (272) 34 103
TCGE (273) 104
TAND (274) 114
TOR (275) 115
TLPAREN (276) 24 34 40 43 44 45 71 72 97 98
TRPAREN (277) 24 34 40 43 44 45 71 72 97 98
TLBRACE (278) 17 18 25 26 31 56 73
TRBRACE (279) 17 18 25 26 31 56 73
TLBRACK (280) 123 124 125
TRBRACK (281) 123 124 125
TDOT (282) 66 67 89 129 132
TARROW (283) 131
TCOMMA (284) 36 38 39 47 65 122
TPLUS (285) 108 123 124
TMINUS (286) 109
TMUL (287) 38 63 77 110
TDIV (288) 111
TMOD (289) 112
TXOR (290) 113
TDOLLAR (291) 92 93
TCOLON (292) 60 80 81 123 124
TSCOPE (293) 127 133
TNOT (294) 118
TSEMI (295) 4 5 7 14 15 16 17 18 21 32 33 43 44 45 76 77
TCMPL (296) 119
TLAND (297) 116
TLOR (298) 117
TSTRUCT (299) 31 46 47 56 57
TSTATE (300) 37 38 39
TFUNC (301)
TGOTO (302) 94
TCONTINUE (303) 96
TNEXT (304) 95
TTRUE (305) 82
TFALSE (306) 83
TRETURN (307) 85
TIF (308) 68 69 70
TELSE (309) 69 70 72
TSWITCH (310) 73
TCASE (311) 76 77
TMATCH (312) 43
TMISS (313) 44
TFAILURE (314) 45
TVALID (315) 71 72
TAT (316) 91
TINCR (317)
TDECR (318)


Simboli nonterminali e regole in cui appaiono

$accept (64)
    nel primo membro: 0
program (65)
    nel primo membro: 1, nel secondo membro: 0
prog_decls (66)
    nel primo membro: 2 3, nel secondo membro: 1 3
prog_decl (67)
    nel primo membro: 4 5 6 7 8 9, nel secondo membro: 2 3
pragma_decl (68)
    nel primo membro: 10 11, nel secondo membro: 8
stmts (69)
    nel primo membro: 12 13, nel secondo membro: 13 25
stmt (70)
    nel primo membro: 14 15 16 17 18 19 20 21 22 23, nel secondo membro:
    12 13
call_expr (71)
    nel primo membro: 24, nel secondo membro: 17 18 86 87
block (72)
    nel primo membro: 25 26, nel secondo membro: 37 38 39 40 43 44
    45 68 69 70 71 72 76 77
enter_varscope (73)
    nel primo membro: 27, nel secondo membro: 1 17 37 38 39 40 43 44
    45 68 69 70 71 72
exit_varscope (74)
    nel primo membro: 28, nel secondo membro: 1 17 37 38 39 40 43 44
    45 68 69 70 71 72
enter_statescope (75)
    nel primo membro: 29, nel secondo membro: 1 37 38 39 40
exit_statescope (76)
    nel primo membro: 30, nel secondo membro: 1 37 38 39 40
struct_decl (77)
    nel primo membro: 31, nel secondo membro: 5
struct_decl_stmts (78)
    nel primo membro: 32 33, nel secondo membro: 31 33
table_decl (79)
    nel primo membro: 34, nel secondo membro: 7
table_decl_args (80)
    nel primo membro: 35 36, nel secondo membro: 34 36
state_decl (81)
    nel primo membro: 37 38 39, nel secondo membro: 6 22
func_decl (82)
    nel primo membro: 40, nel secondo membro: 9
table_result_stmts (83)
    nel primo membro: 41 42, nel secondo membro: 17 42
table_result_stmt (84)
    nel primo membro: 43 44 45, nel secondo membro: 41 42
formals (85)
    nel primo membro: 46 47, nel secondo membro: 40 43 45 47
type_specifier (86)
    nel primo membro: 48 49 50 51, nel secondo membro: 52 53
type_specifiers (87)
    nel primo membro: 52 53, nel secondo membro: 32 33 40 53 54 55
var_decl (88)
    nel primo membro: 54 55 56 57, nel secondo membro: 4 21
decl_stmt (89)
    nel primo membro: 58 59, nel secondo membro: 32 33 54
int_decl (90)
    nel primo membro: 60, nel secondo membro: 55 58
type_decl (91)
    nel primo membro: 61, nel secondo membro: 56 59
ref_stmt (92)
    nel primo membro: 62, nel secondo membro: 57
ptr_decl (93)
    nel primo membro: 63, nel secondo membro: 46 47 62
init_args_kv (94)
    nel primo membro: 64 65, nel secondo membro: 56 65
init_arg_kv (95)
    nel primo membro: 66 67, nel secondo membro: 64 65
if_stmt (96)
    nel primo membro: 68 69 70, nel secondo membro: 19 70
onvalid_stmt (97)
    nel primo membro: 71 72, nel secondo membro: 23
switch_stmt (98)
    nel primo membro: 73, nel secondo membro: 20
case_stmts (99)
    nel primo membro: 74 75, nel secondo membro: 73 75
case_stmt (100)
    nel primo membro: 76 77, nel secondo membro: 74 75
numeric (101)
    nel primo membro: 78 79 80 81 82 83, nel secondo membro: 76 100
    101
assign_expr (102)
    nel primo membro: 84, nel secondo membro: 15
return_expr (103)
    nel primo membro: 85, nel secondo membro: 16
expr (104)
    nel primo membro: 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100
    101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116
    117 118 119, nel secondo membro: 14 55 66 67 68 69 70 73 84 85
    97 98 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116
    117 118 119 121 122
call_args (105)
    nel primo membro: 120 121 122, nel secondo membro: 24 122
bitop (106)
    nel primo membro: 123 124, nel secondo membro: 67 87 93 98 101
table_index_expr (107)
    nel primo membro: 125, nel secondo membro: 88 89
scoped_ident (108)
    nel primo membro: 126 127, nel secondo membro: 37 38 39 61 63 94
    95 96 127 133
dotted_ident (109)
    nel primo membro: 128 129, nel secondo membro: 91 92 93 125 129
    131 132
any_ident (110)
    nel primo membro: 130 131 132 133, nel secondo membro: 24 90
ident (111)
    nel primo membro: 134, nel secondo membro: 31 34 35 36 40 43 44
    45 60 61 63 66 67 71 72 89 125 126 128 130


Stato 0

    0 $accept: . program $end

    $default  riduzione con la regola 29 (enter_statescope)

    program           prosecuzione allo stato 1
    enter_statescope  prosecuzione allo stato 2


Stato 1

    0 $accept: program . $end

    $end  shift e prosecuzione allo stato 3


Stato 2

    1 program: enter_statescope . enter_varscope prog_decls exit_varscope exit_statescope

    $default  riduzione con la regola 27 (enter_varscope)

    enter_varscope  prosecuzione allo stato 4


Stato 3

    0 $accept: program $end .

    $default  accetta


Stato 4

    1 program: enter_statescope enter_varscope . prog_decls exit_varscope exit_statescope

    TIDENTIFIER  shift e prosecuzione allo stato 5
    TPRAGMA      shift e prosecuzione allo stato 6
    TU8          shift e prosecuzione allo stato 7
    TU16         shift e prosecuzione allo stato 8
    TU32         shift e prosecuzione allo stato 9
    TU64         shift e prosecuzione allo stato 10
    TSTRUCT      shift e prosecuzione allo stato 11
    TSTATE       shift e prosecuzione allo stato 12

    prog_decls       prosecuzione allo stato 13
    prog_decl        prosecuzione allo stato 14
    pragma_decl      prosecuzione allo stato 15
    struct_decl      prosecuzione allo stato 16
    table_decl       prosecuzione allo stato 17
    state_decl       prosecuzione allo stato 18
    func_decl        prosecuzione allo stato 19
    type_specifier   prosecuzione allo stato 20
    type_specifiers  prosecuzione allo stato 21
    var_decl         prosecuzione allo stato 22
    ident            prosecuzione allo stato 23


Stato 5

  134 ident: TIDENTIFIER .

    $default  riduzione con la regola 134 (ident)


Stato 6

   10 pragma_decl: TPRAGMA . TIDENTIFIER TIDENTIFIER
   11            | TPRAGMA . TIDENTIFIER TSTRING

    TIDENTIFIER  shift e prosecuzione allo stato 24


Stato 7

   48 type_specifier: TU8 .

    $default  riduzione con la regola 48 (type_specifier)


Stato 8

   49 type_specifier: TU16 .

    $default  riduzione con la regola 49 (type_specifier)


Stato 9

   50 type_specifier: TU32 .

    $default  riduzione con la regola 50 (type_specifier)


Stato 10

   51 type_specifier: TU64 .

    $default  riduzione con la regola 51 (type_specifier)


Stato 11

   31 struct_decl: TSTRUCT . ident TLBRACE struct_decl_stmts TRBRACE
   56 var_decl: TSTRUCT . type_decl TEQUAL TLBRACE init_args_kv TRBRACE
   57         | TSTRUCT . ref_stmt

    TIDENTIFIER  shift e prosecuzione allo stato 5

    type_decl     prosecuzione allo stato 25
    ref_stmt      prosecuzione allo stato 26
    ptr_decl      prosecuzione allo stato 27
    scoped_ident  prosecuzione allo stato 28
    ident         prosecuzione allo stato 29


Stato 12

   37 state_decl: TSTATE . scoped_ident enter_statescope enter_varscope block exit_varscope exit_statescope
   38           | TSTATE . scoped_ident TCOMMA TMUL enter_statescope enter_varscope block exit_varscope exit_statescope
   39           | TSTATE . scoped_ident TCOMMA scoped_ident enter_statescope enter_varscope block exit_varscope exit_statescope

    TIDENTIFIER  shift e prosecuzione allo stato 5

    scoped_ident  prosecuzione allo stato 30
    ident         prosecuzione allo stato 31


Stato 13

    1 program: enter_statescope enter_varscope prog_decls . exit_varscope exit_statescope
    3 prog_decls: prog_decls . prog_decl

    TIDENTIFIER  shift e prosecuzione allo stato 5
    TPRAGMA      shift e prosecuzione allo stato 6
    TU8          shift e prosecuzione allo stato 7
    TU16         shift e prosecuzione allo stato 8
    TU32         shift e prosecuzione allo stato 9
    TU64         shift e prosecuzione allo stato 10
    TSTRUCT      shift e prosecuzione allo stato 11
    TSTATE       shift e prosecuzione allo stato 12

    $default  riduzione con la regola 28 (exit_varscope)

    prog_decl        prosecuzione allo stato 32
    pragma_decl      prosecuzione allo stato 15
    exit_varscope    prosecuzione allo stato 33
    struct_decl      prosecuzione allo stato 16
    table_decl       prosecuzione allo stato 17
    state_decl       prosecuzione allo stato 18
    func_decl        prosecuzione allo stato 19
    type_specifier   prosecuzione allo stato 20
    type_specifiers  prosecuzione allo stato 21
    var_decl         prosecuzione allo stato 22
    ident            prosecuzione allo stato 23


Stato 14

    2 prog_decls: prog_decl .

    $default  riduzione con la regola 2 (prog_decls)


Stato 15

    8 prog_decl: pragma_decl .

    $default  riduzione con la regola 8 (prog_decl)


Stato 16

    5 prog_decl: struct_decl . TSEMI

    TSEMI  shift e prosecuzione allo stato 34


Stato 17

    7 prog_decl: table_decl . TSEMI

    TSEMI  shift e prosecuzione allo stato 35


Stato 18

    6 prog_decl: state_decl .

    $default  riduzione con la regola 6 (prog_decl)


Stato 19

    9 prog_decl: func_decl .

    $default  riduzione con la regola 9 (prog_decl)


Stato 20

   52 type_specifiers: type_specifier .

    $default  riduzione con la regola 52 (type_specifiers)


Stato 21

   40 func_decl: type_specifiers . ident enter_statescope enter_varscope TLPAREN formals TRPAREN block exit_varscope exit_statescope
   53 type_specifiers: type_specifiers . type_specifier
   54 var_decl: type_specifiers . decl_stmt
   55         | type_specifiers . int_decl TEQUAL expr

    TIDENTIFIER  shift e prosecuzione allo stato 5
    TU8          shift e prosecuzione allo stato 7
    TU16         shift e prosecuzione allo stato 8
    TU32         shift e prosecuzione allo stato 9
    TU64         shift e prosecuzione allo stato 10

    type_specifier  prosecuzione allo stato 36
    decl_stmt       prosecuzione allo stato 37
    int_decl        prosecuzione allo stato 38
    type_decl       prosecuzione allo stato 39
    scoped_ident    prosecuzione allo stato 40
    ident           prosecuzione allo stato 41


Stato 22

    4 prog_decl: var_decl . TSEMI

    TSEMI  shift e prosecuzione allo stato 42


Stato 23

   34 table_decl: ident . TCLT table_decl_args TCGT ident TLPAREN TINTEGER TRPAREN

    TCLT  shift e prosecuzione allo stato 43


Stato 24

   10 pragma_decl: TPRAGMA TIDENTIFIER . TIDENTIFIER
   11            | TPRAGMA TIDENTIFIER . TSTRING

    TIDENTIFIER  shift e prosecuzione allo stato 44
    TSTRING      shift e prosecuzione allo stato 45


Stato 25

   56 var_decl: TSTRUCT type_decl . TEQUAL TLBRACE init_args_kv TRBRACE

    TEQUAL  shift e prosecuzione allo stato 46


Stato 26

   57 var_decl: TSTRUCT ref_stmt .

    $default  riduzione con la regola 57 (var_decl)


Stato 27

   62 ref_stmt: ptr_decl .

    $default  riduzione con la regola 62 (ref_stmt)


Stato 28

   61 type_decl: scoped_ident . ident
   63 ptr_decl: scoped_ident . TMUL ident
  127 scoped_ident: scoped_ident . TSCOPE TIDENTIFIER

    TIDENTIFIER  shift e prosecuzione allo stato 5
    TMUL         shift e prosecuzione allo stato 47
    TSCOPE       shift e prosecuzione allo stato 48

    ident  prosecuzione allo stato 49


Stato 29

   31 struct_decl: TSTRUCT ident . TLBRACE struct_decl_stmts TRBRACE
  126 scoped_ident: ident .

    TLBRACE  shift e prosecuzione allo stato 50

    $default  riduzione con la regola 126 (scoped_ident)


Stato 30

   37 state_decl: TSTATE scoped_ident . enter_statescope enter_varscope block exit_varscope exit_statescope
   38           | TSTATE scoped_ident . TCOMMA TMUL enter_statescope enter_varscope block exit_varscope exit_statescope
   39           | TSTATE scoped_ident . TCOMMA scoped_ident enter_statescope enter_varscope block exit_varscope exit_statescope
  127 scoped_ident: scoped_ident . TSCOPE TIDENTIFIER

    TCOMMA  shift e prosecuzione allo stato 51
    TSCOPE  shift e prosecuzione allo stato 48

    $default  riduzione con la regola 29 (enter_statescope)

    enter_statescope  prosecuzione allo stato 52


Stato 31

  126 scoped_ident: ident .

    $default  riduzione con la regola 126 (scoped_ident)


Stato 32

    3 prog_decls: prog_decls prog_decl .

    $default  riduzione con la regola 3 (prog_decls)


Stato 33

    1 program: enter_statescope enter_varscope prog_decls exit_varscope . exit_statescope

    $default  riduzione con la regola 30 (exit_statescope)

    exit_statescope  prosecuzione allo stato 53


Stato 34

    5 prog_decl: struct_decl TSEMI .

    $default  riduzione con la regola 5 (prog_decl)


Stato 35

    7 prog_decl: table_decl TSEMI .

    $default  riduzione con la regola 7 (prog_decl)


Stato 36

   53 type_specifiers: type_specifiers type_specifier .

    $default  riduzione con la regola 53 (type_specifiers)


Stato 37

   54 var_decl: type_specifiers decl_stmt .

    $default  riduzione con la regola 54 (var_decl)


Stato 38

   55 var_decl: type_specifiers int_decl . TEQUAL expr
   58 decl_stmt: int_decl .

    TEQUAL  shift e prosecuzione allo stato 54

    $default  riduzione con la regola 58 (decl_stmt)


Stato 39

   59 decl_stmt: type_decl .

    $default  riduzione con la regola 59 (decl_stmt)


Stato 40

   61 type_decl: scoped_ident . ident
  127 scoped_ident: scoped_ident . TSCOPE TIDENTIFIER

    TIDENTIFIER  shift e prosecuzione allo stato 5
    TSCOPE       shift e prosecuzione allo stato 48

    ident  prosecuzione allo stato 49


Stato 41

   40 func_decl: type_specifiers ident . enter_statescope enter_varscope TLPAREN formals TRPAREN block exit_varscope exit_statescope
   60 int_decl: ident . TCOLON TINTEGER
  126 scoped_ident: ident .

    TCOLON  shift e prosecuzione allo stato 55

    TLPAREN   riduzione con la regola 29 (enter_statescope)
    $default  riduzione con la regola 126 (scoped_ident)

    enter_statescope  prosecuzione allo stato 56


Stato 42

    4 prog_decl: var_decl TSEMI .

    $default  riduzione con la regola 4 (prog_decl)


Stato 43

   34 table_decl: ident TCLT . table_decl_args TCGT ident TLPAREN TINTEGER TRPAREN

    TIDENTIFIER  shift e prosecuzione allo stato 5

    table_decl_args  prosecuzione allo stato 57
    ident            prosecuzione allo stato 58


Stato 44

   10 pragma_decl: TPRAGMA TIDENTIFIER TIDENTIFIER .

    $default  riduzione con la regola 10 (pragma_decl)


Stato 45

   11 pragma_decl: TPRAGMA TIDENTIFIER TSTRING .

    $default  riduzione con la regola 11 (pragma_decl)


Stato 46

   56 var_decl: TSTRUCT type_decl TEQUAL . TLBRACE init_args_kv TRBRACE

    TLBRACE  shift e prosecuzione allo stato 59


Stato 47

   63 ptr_decl: scoped_ident TMUL . ident

    TIDENTIFIER  shift e prosecuzione allo stato 5

    ident  prosecuzione allo stato 60


Stato 48

  127 scoped_ident: scoped_ident TSCOPE . TIDENTIFIER

    TIDENTIFIER  shift e prosecuzione allo stato 61


Stato 49

   61 type_decl: scoped_ident ident .

    $default  riduzione con la regola 61 (type_decl)


Stato 50

   31 struct_decl: TSTRUCT ident TLBRACE . struct_decl_stmts TRBRACE

    TU8   shift e prosecuzione allo stato 7
    TU16  shift e prosecuzione allo stato 8
    TU32  shift e prosecuzione allo stato 9
    TU64  shift e prosecuzione allo stato 10

    struct_decl_stmts  prosecuzione allo stato 62
    type_specifier     prosecuzione allo stato 20
    type_specifiers    prosecuzione allo stato 63


Stato 51

   38 state_decl: TSTATE scoped_ident TCOMMA . TMUL enter_statescope enter_varscope block exit_varscope exit_statescope
   39           | TSTATE scoped_ident TCOMMA . scoped_ident enter_statescope enter_varscope block exit_varscope exit_statescope

    TIDENTIFIER  shift e prosecuzione allo stato 5
    TMUL         shift e prosecuzione allo stato 64

    scoped_ident  prosecuzione allo stato 65
    ident         prosecuzione allo stato 31


Stato 52

   37 state_decl: TSTATE scoped_ident enter_statescope . enter_varscope block exit_varscope exit_statescope

    $default  riduzione con la regola 27 (enter_varscope)

    enter_varscope  prosecuzione allo stato 66


Stato 53

    1 program: enter_statescope enter_varscope prog_decls exit_varscope exit_statescope .

    $default  riduzione con la regola 1 (program)


Stato 54

   55 var_decl: type_specifiers int_decl TEQUAL . expr

    TIDENTIFIER  shift e prosecuzione allo stato 5
    TINTEGER     shift e prosecuzione allo stato 67
    THEXINTEGER  shift e prosecuzione allo stato 68
    TSTRING      shift e prosecuzione allo stato 69
    TLPAREN      shift e prosecuzione allo stato 70
    TDOLLAR      shift e prosecuzione allo stato 71
    TNOT         shift e prosecuzione allo stato 72
    TCMPL        shift e prosecuzione allo stato 73
    TGOTO        shift e prosecuzione allo stato 74
    TCONTINUE    shift e prosecuzione allo stato 75
    TNEXT        shift e prosecuzione allo stato 76
    TTRUE        shift e prosecuzione allo stato 77
    TFALSE       shift e prosecuzione allo stato 78
    TAT          shift e prosecuzione allo stato 79

    call_expr         prosecuzione allo stato 80
    numeric           prosecuzione allo stato 81
    expr              prosecuzione allo stato 82
    table_index_expr  prosecuzione allo stato 83
    scoped_ident      prosecuzione allo stato 84
    dotted_ident      prosecuzione allo stato 85
    any_ident         prosecuzione allo stato 86
    ident             prosecuzione allo stato 87


Stato 55

   60 int_decl: ident TCOLON . TINTEGER

    TINTEGER  shift e prosecuzione allo stato 88


Stato 56

   40 func_decl: type_specifiers ident enter_statescope . enter_varscope TLPAREN formals TRPAREN block exit_varscope exit_statescope

    $default  riduzione con la regola 27 (enter_varscope)

    enter_varscope  prosecuzione allo stato 89


Stato 57

   34 table_decl: ident TCLT table_decl_args . TCGT ident TLPAREN TINTEGER TRPAREN
   36 table_decl_args: table_decl_args . TCOMMA ident

    TCGT    shift e prosecuzione allo stato 90
    TCOMMA  shift e prosecuzione allo stato 91


Stato 58

   35 table_decl_args: ident .

    $default  riduzione con la regola 35 (table_decl_args)


Stato 59

   56 var_decl: TSTRUCT type_decl TEQUAL TLBRACE . init_args_kv TRBRACE

    TDOT  shift e prosecuzione allo stato 92

    init_args_kv  prosecuzione allo stato 93
    init_arg_kv   prosecuzione allo stato 94


Stato 60

   63 ptr_decl: scoped_ident TMUL ident .

    $default  riduzione con la regola 63 (ptr_decl)


Stato 61

  127 scoped_ident: scoped_ident TSCOPE TIDENTIFIER .

    $default  riduzione con la regola 127 (scoped_ident)


Stato 62

   31 struct_decl: TSTRUCT ident TLBRACE struct_decl_stmts . TRBRACE
   33 struct_decl_stmts: struct_decl_stmts . type_specifiers decl_stmt TSEMI

    TU8      shift e prosecuzione allo stato 7
    TU16     shift e prosecuzione allo stato 8
    TU32     shift e prosecuzione allo stato 9
    TU64     shift e prosecuzione allo stato 10
    TRBRACE  shift e prosecuzione allo stato 95

    type_specifier   prosecuzione allo stato 20
    type_specifiers  prosecuzione allo stato 96


Stato 63

   32 struct_decl_stmts: type_specifiers . decl_stmt TSEMI
   53 type_specifiers: type_specifiers . type_specifier

    TIDENTIFIER  shift e prosecuzione allo stato 5
    TU8          shift e prosecuzione allo stato 7
    TU16         shift e prosecuzione allo stato 8
    TU32         shift e prosecuzione allo stato 9
    TU64         shift e prosecuzione allo stato 10

    type_specifier  prosecuzione allo stato 36
    decl_stmt       prosecuzione allo stato 97
    int_decl        prosecuzione allo stato 98
    type_decl       prosecuzione allo stato 39
    scoped_ident    prosecuzione allo stato 40
    ident           prosecuzione allo stato 99


Stato 64

   38 state_decl: TSTATE scoped_ident TCOMMA TMUL . enter_statescope enter_varscope block exit_varscope exit_statescope

    $default  riduzione con la regola 29 (enter_statescope)

    enter_statescope  prosecuzione allo stato 100


Stato 65

   39 state_decl: TSTATE scoped_ident TCOMMA scoped_ident . enter_statescope enter_varscope block exit_varscope exit_statescope
  127 scoped_ident: scoped_ident . TSCOPE TIDENTIFIER

    TSCOPE  shift e prosecuzione allo stato 48

    $default  riduzione con la regola 29 (enter_statescope)

    enter_statescope  prosecuzione allo stato 101


Stato 66

   37 state_decl: TSTATE scoped_ident enter_statescope enter_varscope . block exit_varscope exit_statescope

    TLBRACE  shift e prosecuzione allo stato 102

    block  prosecuzione allo stato 103


Stato 67

   78 numeric: TINTEGER .
   80        | TINTEGER . TCOLON TINTEGER

    TCOLON  shift e prosecuzione allo stato 104

    $default  riduzione con la regola 78 (numeric)


Stato 68

   79 numeric: THEXINTEGER .
   81        | THEXINTEGER . TCOLON TINTEGER

    TCOLON  shift e prosecuzione allo stato 105

    $default  riduzione con la regola 79 (numeric)


Stato 69

   99 expr: TSTRING .

    $default  riduzione con la regola 99 (expr)


Stato 70

   97 expr: TLPAREN . expr TRPAREN
   98     | TLPAREN . expr TRPAREN bitop

    TIDENTIFIER  shift e prosecuzione allo stato 5
    TINTEGER     shift e prosecuzione allo stato 67
    THEXINTEGER  shift e prosecuzione allo stato 68
    TSTRING      shift e prosecuzione allo stato 69
    TLPAREN      shift e prosecuzione allo stato 70
    TDOLLAR      shift e prosecuzione allo stato 71
    TNOT         shift e prosecuzione allo stato 72
    TCMPL        shift e prosecuzione allo stato 73
    TGOTO        shift e prosecuzione allo stato 74
    TCONTINUE    shift e prosecuzione allo stato 75
    TNEXT        shift e prosecuzione allo stato 76
    TTRUE        shift e prosecuzione allo stato 77
    TFALSE       shift e prosecuzione allo stato 78
    TAT          shift e prosecuzione allo stato 79

    call_expr         prosecuzione allo stato 80
    numeric           prosecuzione allo stato 81
    expr              prosecuzione allo stato 106
    table_index_expr  prosecuzione allo stato 83
    scoped_ident      prosecuzione allo stato 84
    dotted_ident      prosecuzione allo stato 85
    any_ident         prosecuzione allo stato 86
    ident             prosecuzione allo stato 87


Stato 71

   92 expr: TDOLLAR . dotted_ident
   93     | TDOLLAR . dotted_ident bitop

    TIDENTIFIER  shift e prosecuzione allo stato 5

    dotted_ident  prosecuzione allo stato 107
    ident         prosecuzione allo stato 108


Stato 72

  118 expr: TNOT . expr

    TIDENTIFIER  shift e prosecuzione allo stato 5
    TINTEGER     shift e prosecuzione allo stato 67
    THEXINTEGER  shift e prosecuzione allo stato 68
    TSTRING      shift e prosecuzione allo stato 69
    TLPAREN      shift e prosecuzione allo stato 70
    TDOLLAR      shift e prosecuzione allo stato 71
    TNOT         shift e prosecuzione allo stato 72
    TCMPL        shift e prosecuzione allo stato 73
    TGOTO        shift e prosecuzione allo stato 74
    TCONTINUE    shift e prosecuzione allo stato 75
    TNEXT        shift e prosecuzione allo stato 76
    TTRUE        shift e prosecuzione allo stato 77
    TFALSE       shift e prosecuzione allo stato 78
    TAT          shift e prosecuzione allo stato 79

    call_expr         prosecuzione allo stato 80
    numeric           prosecuzione allo stato 81
    expr              prosecuzione allo stato 109
    table_index_expr  prosecuzione allo stato 83
    scoped_ident      prosecuzione allo stato 84
    dotted_ident      prosecuzione allo stato 85
    any_ident         prosecuzione allo stato 86
    ident             prosecuzione allo stato 87


Stato 73

  119 expr: TCMPL . expr
